--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrome-ext-messenger",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "author": "Asaf Menahem",
   "description": "Chrome extension message passing made easy",
   "main": "dist/chrome-ext-messenger.min.js",
@@ -10,7 +10,9 @@
     "test": "./node_modules/.bin/mocha ./test/main.js --compilers js:babel-core/register --timeout 10000"
   },
   "repository": "https://github.com/asimen1/chrome-ext-messenger",
+  "bugs": "https://github.com/asimen1/chrome-ext-messenger/issues",
   "license": "MIT",
+  "keywords": ["chrome extension", "message passing", "messenger", "messages"],
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
