--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Chrome extension message passing made easy",
   "main": "dist/chrome-ext-messenger.min.js",
   "scripts": {
-    "build": "set WEBPACK_ENV=build&&webpack --progress",
-    "dev": "set WEBPACK_ENV=dev&&webpack --progress --watch",
+    "build": "set WEBPACK_ENV=build&&\"./node_modules/.bin/webpack\" --progress",
+    "dev": "set WEBPACK_ENV=dev&&\"./node_modules/.bin/webpack\" --progress --watch",
     "test": "./node_modules/.bin/mocha ./test/main.js --compilers js:babel-core/register --timeout 10000"
   },
   "repository": "https://github.com/asimen1/chrome-ext-messenger",
