--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "chrome-ext-messenger",
-  "version": "2.0.12",
+  "name": "ext-messenger",
+  "version": "3.0.0",
   "author": "Asaf Menahem",
-  "description": "Chrome extension message passing made easy",
-  "main": "dist/chrome-ext-messenger.min.js",
+  "description": "Extension message passing made easy",
+  "main": "dist/ext-messenger.min.js",
   "scripts": {
     "build": "set WEBPACK_ENV=build&&\"./node_modules/.bin/webpack\" --progress",
     "dev": "set WEBPACK_ENV=dev&&\"./node_modules/.bin/webpack\" --progress --watch",
     "test": "./node_modules/.bin/mocha ./test/main.js --compilers js:babel-core/register --timeout 10000"
   },
-  "repository": "https://github.com/asimen1/chrome-ext-messenger",
-  "bugs": "https://github.com/asimen1/chrome-ext-messenger/issues",
+  "repository": "https://github.com/asimen1/ext-messenger",
+  "bugs": "https://github.com/asimen1/ext-messenger/issues",
   "license": "MIT",
   "keywords": [
     "chrome extension",
+    "firefox add-on",
     "message passing",
     "messenger",
     "messages"
