--- a/package.json
+++ b/package.json
@@ -1,39 +1,30 @@
 {
   "name": "ext-messenger",
-  "version": "3.0.2",
+  "version": "4.0.0",
   "author": "Asaf Menahem",
   "description": "Extension message passing made easy",
   "main": "dist/ext-messenger.min.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "set WEBPACK_ENV=build&&\"./node_modules/.bin/webpack\" --progress",
-    "dev": "set WEBPACK_ENV=dev&&\"./node_modules/.bin/webpack\" --progress --watch",
-    "test": "./node_modules/.bin/mocha ./test/main.js --compilers js:babel-core/register --timeout 10000"
+    "build": "webpack --mode production --progress",
+    "dev": "webpack --mode development --progress --watch"
   },
   "repository": "https://github.com/asimen1/ext-messenger",
   "bugs": "https://github.com/asimen1/ext-messenger/issues",
   "license": "MIT",
   "keywords": [
     "chrome extension",
-    "firefox add-on",
     "message passing",
     "messenger",
     "messages"
   ],
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.22.0",
-    "chai": "^3.5.0",
-    "clean-webpack-plugin": "^0.1.15",
-    "eslint": "^6.0.0",
-    "mocha": "^3.2.0",
-    "rewire": "^2.5.2",
-    "sinon": "^1.17.7",
-    "sinon-chrome": "^2.1.3",
-    "webpack": "^1.14.0"
-  },
-  "dependencies": {
-    "logdown": "^2.0.3"
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "eslint": "^8.57.0",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
